Moved some files around, improved architecture of responder

--- a/src/IrcSomeBot/App.config
+++ b/src/IrcSomeBot/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="server" value="chat.freenode.net" />
     <add key="port" value="6667" />
-    <add key="channel" value="#r-wsb" />
+    <add key="channel" value="#bottest" />
     <add key="username" value="commaTicker_bot" />
   </appSettings>
 </configuration>
