Add join responder, fix some minor message target issues in ticker responder, try to fix kickresponder

--- a/src/IrcSomeBot/App.config
+++ b/src/IrcSomeBot/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="server" value="chat.freenode.net" />
-    <add key="port" value="6667" />
-    <add key="channel" value="#r-wsb" />
-    <add key="username" value="commaTicker_bot" />
+    <add key="server" value="server" />
+    <add key="port" value="port" />
+    <add key="channel" value="home" />
+    <add key="username" value="name" />
   </appSettings>
 </configuration>
