Add joinresponder, mess with packages, fix parsing in ircmessage, add tests for ircmessage

--- a/test/IrcSomeBot.Tests/IrcSomeBot.Tests.csproj
+++ b/test/IrcSomeBot.Tests/IrcSomeBot.Tests.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IrcMessageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responder\TickerTrackerRecordTests.cs" />
   </ItemGroup>
