--- a/src/IrcSomeBot/packages.config
+++ b/src/IrcSomeBot/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CsvHelper" version="2.15.0.1" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
 </packages>
